src/objects/Opportunity_Screening__c.object
<CustomObject>
    <fields>
        <fullName>Gate2_Will_Project_Development1_A__c</fullName>
        <description>R4- This field refers to Gate2_Will_Project_Development1_A.</description>
        <label>15. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Strongly agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strongly disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gate2_Will_Project_Development1_Q__c</fullName>
        <defaultValue>$Label.OPS_Gate2_Will_Project_Development1</defaultValue>
        <description>R4 - This field refers to Gate2_Will_ProjectDevelopment1_Q.</description>
        <label>15. Project Development</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gate2_Will_Project_Development2_A__c</fullName>
        <description>R4- This field refers to Gate2_Will_Project_Development2_A.</description>
        <label>16. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Strongly agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strongly disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gate2_Will_Project_Development2_Q__c</fullName>
        <defaultValue>$Label.OPS_Gate2_Will_Project_Development2</defaultValue>
        <description>R4 - This field refers to Gate2_Will_ProjectDevelopment2_Q.</description>
        <label>16. Project Development</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gate3_RiskProfiling_A1__c</fullName>
        <description>R4 v1 - Gate3_RiskProfiling_A1</description>
        <label>Risk Profiling</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gate_Status__c</fullName>
        <description>R4 - Gate 1 Status</description>
        <label>Gate Status</label>
        <picklist>
            <picklistValues>
                <fullName>BID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO BID</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R4 - To find record being Locked or not</description>
        <label>IsApproved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Local_Business_Unit__c</fullName>
        <description>Created as part of R5 AWA</description>
        <formula>RIGHT(Opportunity__r.Local_Business_Unit__r.Name,4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leading LBU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Product_Group__c</fullName>
        <description>Created as part of R5 AWA</description>
        <formula>Opportunity__r.Local_Product_Group__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leading LPG</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <description>R5</description>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Margin__c</fullName>
        <formula>Opportunity__r.Net_Margin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opportunity_Value_Range__c</fullName>
        <formula>IF(Opportunity__r.Opportunity_Value__c &lt; 2000000,&apos;&lt;2M&apos;, IF(Opportunity__r.Opportunity_Value__c &gt;=2000000 &amp;&amp; Opportunity__r.Opportunity_Value__c &lt; 5000000,&apos;&gt;=2M &lt;5M&apos;,IF(Opportunity__r.Opportunity_Value__c &gt;=5000000 &amp;&amp; Opportunity__r.Opportunity_Value__c &lt; 15000000,&apos;&gt;=5M &lt;15M&apos;,IF(Opportunity__r.Opportunity_Value__c &gt;=15000000 &amp;&amp; Opportunity__r.Opportunity_Value__c &lt; 25000000,&apos;&gt;=15M &lt;25M&apos;,IF(Opportunity__r.Opportunity_Value__c &gt;=25000000 &amp;&amp; Opportunity__r.Opportunity_Value__c &lt; 50000000,&apos;&gt;=25M &lt;50M&apos;,IF(Opportunity__r.Opportunity_Value__c &gt;= 50000000,&apos;&gt;=50M&apos;,&apos;&apos;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Value Range</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Value__c</fullName>
        <formula>Opportunity__r.Opportunity_Value__c</formula>
        <label>Opportunity Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>R4-Opportunity Master detail relation with Opportunity Screening</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Screenings</relationshipLabel>
        <relationshipName>Opportunity_Screenings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Primary_Acc_Manager_Text__c</fullName>
        <label>Primary Acc Manager (Text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Acc_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>created as part of R5-AWA</description>
        <label>Primary Acc Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Screenings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Account_Manager__c</fullName>
        <formula>Opportunity__r.Account.Key_Account_Manager__r.Id</formula>
        <label>Primary Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <formula>Opportunity__r.Local_Product_Group__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RISK_Commercial__c</fullName>
        <formula>(CASE(Text(Risk_Profiling_Commercial1_A__c), &quot;Very high exposure&quot;, 40, &quot;High exposure&quot;, 30 ,&quot;Moderate exposure&quot;, 20, &quot;No exposure&quot;, 0, 0 ) +
CASE(Text(Risk_Profiling_Commercial2_A__c), &quot;Very poor&quot;, 50, &quot;Poor&quot;, 30 ,&quot;Medium&quot;, 15, &quot;Good&quot;, 0, 0 )) *100/90</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RISK_Commercial</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Risk_Contract_Agreement__c</fullName>
        <formula>(CASE(Text(Risk_Profiling_Contract1_A__c), &quot;Yes&quot;, 75, &quot;No&quot;, 0 ,&quot;Not defined yet/not known&quot;, 0, 0 ) + 
CASE(Text(Risk_Profiling_Contract2_A__c), &quot;Unclear/not defined&quot;, 40, &quot;Partly clear/defined&quot;, 30 ,&quot;Mostly clear/defined&quot;, 20, &quot;Fully clear/ defined&quot;, 10, 0 )) *100/115</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk_Contract_Agreement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Risk_Customer__c</fullName>
        <formula>(CASE(Text(Risk_Profiling_Customer1_A__c), &quot;Very weak&quot;, 40, &quot;Weak&quot;, 30 ,&quot;Average&quot;, 20, &quot;Strong&quot;, 10, 0 ) + 
CASE(Text(Risk_Profiling_Customer2_A__c), &quot;No experience&quot;, 30, &quot;Very difficult&quot;, 40 ,&quot;Difficult&quot;, 30, &quot;Good&quot;, 10,&quot;Very good&quot;,0, 0 )+
CASE(Text(Risk_Profiling_Customer3_A__c), &quot;Governmental owned company (&gt; 50% ownership)&quot;, 40, &quot;Special Purpose Company&quot;, 30 ,&quot;EPC contractor&quot;, 60, 
&quot;Publicly traded company&quot;, 40,&quot;Subsidiary&quot;,40,&quot;Other, not complex&quot;,0, 0 )+
CASE(Text(Risk_Profiling_Customer4_A__c), &quot;Group account&quot;, 35, &quot;Strategic Account&quot;, 30 ,&quot;Key account (country)&quot;, 25, &quot;Channel partner&quot;, 0,&quot;No special status&quot;,0, 0 ))
*100/175</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk_Customer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Risk_OrderValue__c</fullName>
        <formula>IF(AND(Opportunity__r.Technical_Amount_USD__c &gt;= 0,
Opportunity__r.Technical_Amount_USD__c &lt;= 1000000),0,
IF(AND(Opportunity__r.Technical_Amount_USD__c &gt;= 1000000,
Opportunity__r.Technical_Amount_USD__c &lt;= 2000000),10,
IF(AND(Opportunity__r.Technical_Amount_USD__c &gt;= 2000000,
Opportunity__r.Technical_Amount_USD__c &lt;= 3000000),20,
IF(AND(Opportunity__r.Technical_Amount_USD__c &gt;= 3000000,
Opportunity__r.Technical_Amount_USD__c &lt;= 5000000),25,
IF(AND(Opportunity__r.Technical_Amount_USD__c &gt;= 5000000,
Opportunity__r.Technical_Amount_USD__c &lt;= 10000000),30,
IF(AND(Opportunity__r.Technical_Amount_USD__c &gt;= 10000000,
Opportunity__r.Technical_Amount_USD__c &lt;= 15000000),40,
IF(AND(Opportunity__r.Technical_Amount_USD__c &gt;= 15000000,
Opportunity__r.Technical_Amount_USD__c &lt;= 25000000),50,
IF(AND(Opportunity__r.Technical_Amount_USD__c &gt;= 25000000,
Opportunity__r.Technical_Amount_USD__c &lt;= 50000000),75,
IF(AND(Opportunity__r.Technical_Amount_USD__c &gt;= 50000000,
Opportunity__r.Technical_Amount_USD__c &lt;= 100000000),90,
IF(AND(Opportunity__r.Technical_Amount_USD__c &gt;= 100000000,
Opportunity__r.Technical_Amount_USD__c &lt;= 300000000),100,
IF(Opportunity__r.Technical_Amount_USD__c &gt; 300000000,150,0)))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk_OrderValue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Risk_Political__c</fullName>
        <formula>(CASE(Text(Risk_Profiling_PRL1_A__c), &quot;Demanding process, time critical&quot;, 30, &quot;Standard requirements, non critical&quot;, 20 ,&quot;Not applicable&quot;,0, 0 ) + 
CASE(Text(Risk_Profiling_PRL2_A__c), &quot;Applicable&quot;, 20,&quot;Not applicable&quot;,0, 0 ) + 
CASE(Text(Risk_Profiling_PRL3_A__c), &quot;Applicable&quot;, 50,&quot;Not applicable&quot;,0, 0 )
) *100/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk_Political</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Risk_Profiling_Commercial1_A__c</fullName>
        <label>46. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Very high exposure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High exposure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate exposure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No exposure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Profiling_Commercial1_Q__c</fullName>
        <defaultValue>$Label.OPS_Risk_Profiling_Commercial1</defaultValue>
        <description>R4 v1 - Text field to capture the Question Risk_profiling_Commercial1_Question</description>
        <label>46. Commercial</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Profiling_Commercial2_A__c</fullName>
        <label>47. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Very poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Profiling_Commercial2_Q__c</fullName>
        <defaultValue>$Label.OPS_Risk_Profiling_Commercial2</defaultValue>
        <description>R4 v1 - Text field to capture the Question Risk_profiling_Commercial2_Question</description>
        <label>47. Commercial</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Profiling_Contract1_A__c</fullName>
        <label>48. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not defined yet/not known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Profiling_Contract1_Q__c</fullName>
        <defaultValue>$Label.OPS_Risk_Profiling_Contract1</defaultValue>
        <description>R4 v1 - Text field to capture the Question Risk_profiling_Contract &amp; Agreement1_Question</description>
        <label>48. Contract &amp; Agreement</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Profiling_Contract2_A__c</fullName>
        <label>49. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Unclear/not defined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partly clear/defined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mostly clear/defined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fully clear/defined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Profiling_Contract2_Q__c</fullName>
        <defaultValue>$Label.OPS_Risk_Profiling_Contract2</defaultValue>
        <description>R4 v1 - Text field to capture the Question Risk_profiling_Contract &amp; Agreement2_Question</description>
        <label>49. Contract &amp; Agreement</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Profiling_Customer1_A__c</fullName>
        <label>50. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Very weak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strong</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Profiling_Customer1_Q__c</fullName>
        <defaultValue>$Label.OPS_Risk_Profiling_Customer1</defaultValue>
        <description>R4 v1 - Text field to capture the Question Risk_profiling_Customer1_Question</description>
        <label>50. Customer</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Profiling_Customer2_A__c</fullName>
        <label>51. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>No experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very difficult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Difficult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very good</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Profiling_Customer2_Q__c</fullName>
        <defaultValue>$Label.OPS_Risk_Profiling_Customer2</defaultValue>
        <description>R4 v1 - Text field to capture the Question Risk_profiling_Customer2_Question</description>
        <label>51. Customer</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Profiling_Customer3_A__c</fullName>
        <label>52. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Governmental owned company (&gt; 50% ownership)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special purpose company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPC contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publicly traded company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsidiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other, not complex</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Profiling_Customer3_Q__c</fullName>
        <defaultValue>$Label.OPS_Risk_Profiling_Customer3</defaultValue>
        <description>R4 v1 - Text field to capture the Question Risk_profiling_Customer3_Question</description>
        <label>52. Customer</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Profiling_Logistics1_A__c</fullName>
        <label>83. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Very difficult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Difficult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Profiling_Logistics1_Q__c</fullName>
        <defaultValue>$Label.OPS_Risk_Profiling_Logistics1</defaultValue>
        <description>R4 v1 - Text field to capture the Question Risk_Profiling_Logistics1_Question</description>
        <label>83. Logistics</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Profiling_Logistics2_A__c</fullName>
        <label>84. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Very difficult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Difficult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Profiling_Logistics2_Q__c</fullName>
        <defaultValue>$Label.OPS_Risk_Profiling_Logistics2</defaultValue>
        <description>R4 v1 - Text field to capture the Question Risk_Profiling_Logistics2_Question</description>
        <label>84. Logistics</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Profiling_Logistics3_A__c</fullName>
        <label>85. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very difficult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Difficult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Easy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very easy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Profiling_Logistics3_Q__c</fullName>
        <defaultValue>$Label.OPS_Risk_Profiling_Logistics3</defaultValue>
        <description>R4 v1 - Text field to capture the Question Risk_Profiling_Logistics3_Question</description>
        <label>85. Logistics</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Profiling_PRL1_A__c</fullName>
        <label>57. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Demanding process, time critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard requirements, non critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Profiling_PRL1_Q__c</fullName>
        <defaultValue>$Label.OPS_Risk_Profiling_PRL1</defaultValue>
        <description>R4 v1 - Text field to capture the Question Risk_profiling_Political, Regulatory &amp; Legislation 1_Question</description>
        <label>57. Political, Regulatory &amp; Legislation</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Profiling_PRL2_A__c</fullName>
        <label>58. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Profiling_PRL2_Q__c</fullName>
        <defaultValue>$Label.OPS_Risk_Profiling_PRL2</defaultValue>
        <description>R4 v1 - Text field to capture the Question Risk_profiling_Political, Regulatory &amp; Legislation2_Question</description>
        <label>58. Political, Regulatory &amp; Legislation</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Profiling_PRL3_A__c</fullName>
        <label>59. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Profiling_PRL3_Q__c</fullName>
        <defaultValue>$Label.OPS_Risk_Profiling_PRL3</defaultValue>
        <description>R4 v1 - Text field to capture the Question Risk_profiling_Political, Regulatory &amp; Legislation 3_Question</description>
        <label>59. Political, Regulatory &amp; Legislation</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Profiling_Project_setup1_A__c</fullName>
        <label>60. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Multiple ABB Units in different regions.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple ABB Units in same region are supplying.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple ABB Units in same country are supplying.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Profiling_Project_setup1_Q__c</fullName>
        <defaultValue>$Label.OPS_Risk_Profiling_Project_setup1</defaultValue>
        <description>R4 v1 - Text field to capture the Question Risk_profiling_Project setup 1_Question</description>
        <label>60. Project setup</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Profiling_Project_setup2_A__c</fullName>
        <label>61. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Multi country</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Between two countries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Same country</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Profiling_Project_setup2_Q__c</fullName>
        <defaultValue>$Label.OPS_Risk_Profiling_Project_setup2</defaultValue>
        <description>R4 v1 - Text field to capture the Question Risk_profiling_  Project setup 1_Question</description>
        <inlineHelpText>choose &quot;Between two Countries&quot; when: End User or Customer are in a different country than the ABB unit</inlineHelpText>
        <label>61. Project setup</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Profiling_Project_setup3_A__c</fullName>
        <label>62. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Joint venture or partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External consortium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal consortium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Split revenues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subcontracting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Profiling_Project_setup3_Q__c</fullName>
        <defaultValue>$Label.OPS_Risk_Profiling_Project_setup3</defaultValue>
        <description>R4 v1 - Text field to capture the Question Risk_profiling_ Project setup 3_Question</description>
        <label>62. Project setup</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Profiling_Resource_Capability1_A__c</fullName>
        <label>64. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Very high</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Profiling_Resource_Capability1_Q__c</fullName>
        <defaultValue>$Label.OPS_Risk_Profiling_Resource_Capability1</defaultValue>
        <description>R4 v1 - Text field to capture the Question Risk_profiling_ Resources &amp; Capability 1_Question</description>
        <label>64. Resources &amp; Capability</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Profiling_Resource_Capability2_A__c</fullName>
        <label>65. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Higher than capabilities/skills available in the LBU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially aligned with the available capabilities/skills in the LBU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aligned or lower than capabilities/skills available in the LBU</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Profiling_Resource_Capability2_Q__c</fullName>
        <defaultValue>$Label.OPS_Risk_Profiling_Resources_Capability2</defaultValue>
        <description>R4 v1 - Text field to capture the Question Risk_profiling_ Resources &amp; Capability2_Question</description>
        <label>65. Resources &amp; Capability</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Profiling_Resource_Capability3_A__c</fullName>
        <label>66. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Very high</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Profiling_Resource_Capability3_Q__c</fullName>
        <defaultValue>$Label.OPS_Risk_Profiling_Resources_Capability3</defaultValue>
        <description>R4 v1 - Text field to capture the Question Risk_profiling_ Resources &amp; Capability 3_Question</description>
        <label>66. Resources &amp; Capability</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Profiling_SCM_Suppliers1_A__c</fullName>
        <label>68. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Not available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Available but not qualified by customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Available and qualified by customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Profiling_SCM_Suppliers1_Q__c</fullName>
        <defaultValue>$Label.OPS_Risk_Profiling_SCM_Suppliers1</defaultValue>
        <description>R4 v1 - Text field to capture the Question Risk_Profiling_SCM_Suppliers1_Question</description>
        <label>68. SCM Suppliers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Profiling_SCM_Suppliers2_A__c</fullName>
        <label>69. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very high</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Profiling_SCM_Suppliers2_Q__c</fullName>
        <defaultValue>$Label.OPS_Risk_Profiling_SCM_Suppliers2</defaultValue>
        <description>R4 v1 - Text field to capture the Question Risk_Profiling_SCM_Suppliers2_Question</description>
        <label>69. SCM Suppliers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Profiling_SCM_Suppliers3_A__c</fullName>
        <label>70. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Very poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>